Fix: Services Section Grid Column Gap

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -23,7 +23,7 @@
 
   .home-page-main-text {
     position: absolute;
-    top: 50%;
+    top: 5%;
     left: 50%;
     transform: translate(-50%, -66%);
     color: $secondary-text-color;
@@ -58,8 +58,10 @@
     }
 
     p {
+      width: 380px;
       margin-bottom: 10px;
       font-size: $font-size-20px;
+      font-weight: bold;
     }
 
     .see-all-services {
@@ -81,6 +83,7 @@
     .service-images-grid {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
+      column-gap: 20px;
 
       .service-item {
         height: 370px;
